--- a/addons/bestja_frontend_fpbz/views/assets.xml
+++ b/addons/bestja_frontend_fpbz/views/assets.xml
@@ -5,7 +5,7 @@
             <xpath expr="." position="inside">
                 <link rel="icon" href="/bestja_frontend_fpbz/static/src/img/favicon.ico" type="image/x-icon"/>
                 <link rel="icon" href="/bestja_frontend_fpbz/static/src/img/favicon.png" type="image/png"/>
-                <link rel="shortcut icon" href="/bestja_frontend_fpbz/static/src/img/favicon32.ico" type="image/png"/>
+                <link rel="shortcut icon" href="/bestja_frontend_fpbz/static/src/img/favicon32.png" type="image/png"/>
 
                 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
                 <link rel="stylesheet" href="/bestja_frontend_fpbz/static/src/css/custom.css"/>
