--- a/addons/bestja_frontend_fpbz/static/src/css/custom.css
+++ b/addons/bestja_frontend_fpbz/static/src/css/custom.css
@@ -1082,9 +1082,10 @@ text:hover {
 }
 
 #info_sign_register_message {
+    font-family: 'Open Sans Condensed', sans-serif;
     background-color: #ffffff;
     display: none;
-    padding: 4px 8px;
+    padding: 10px 20px;
     width: 300px;
     margin-top: 16px;
     position: absolute;
@@ -1096,7 +1097,7 @@ text:hover {
     -moz-box-shadow: 0px 0px 4px #58585A;
     -webkit-box-shadow: 0px 0px 4px #58585A;
     box-shadow: 0px 0px 4px #58585A;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .col-sm-3 .affix {
